# archive-reader

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  main.c  wrapper.h
src/: error.rs  lending_iter.rs  lib.rs  libarchive.rs  locale.rs
src/archive_reader/: archive.rs  archive_tests.rs  blocks.rs  entries.rs  entry.rs  iter.rs  mod.rs  reader.rs  tests.rs
src/archive_reader/tests/: archive_tests.rs  mod.rs  reader_tests.rs
src/libarchive/: mod.rs
test_resources/: encrypted.7z  large.txt  test.7z  test.rar
