[package]
name = "archive-reader"
version = "0.2.1"
edition = "2021"
authors = ["Yaxin Cheng <yaxin.cheng@icloud.com>"]
license = "MIT"
description = "Library for reading files from archives"
homepage = "https://github.com/YaxinCheng/archive-reader"
repository = "https://github.com/YaxinCheng/archive-reader"
readme = "README.md"
keywords = ["libarchive", "zip", "rar", "7z"]
exclude = ["test_resources", "src/archive_reader/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4"

[build-dependencies]
pkg-config = "0.3"

[features]
lending_iter = []

